# hiver

./: .dockerignore  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  PRD.md  PROTOTYPE.md  README.md  THREAT_MODEL.md  artifacthub-repo.yml  go.mod  go.sum  index.yaml  package-lock.json  package.json
.github/workflows/: build-cli.yaml  build-images.yaml  build-runtime-images.yaml  build-sandbox-images.yaml  e2e.yaml  release.yaml  (+2 more)
api/: config-server.yaml  config.yaml  controller_server.yaml  events.yaml  external_file_system.yaml  mcp-server.yaml  mcp.yaml  mcp_server.yaml  openapi.yaml  sandbox_server.yaml  server.yaml
cli/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
client/: README.md
client/python/: README.md  pyproject.toml
client/python/examples/: python_exec_stream.py  python_exec_tty.py
client/python/src/hive/: __init__.py  controller.py  sandbox.py  schemas.py  sse.py  utils.py
client/python/src/hiver/: __init__.py  controller.py  sandbox.py  schemas.py  utils.py
client/python/tests/: test_controller.py  test_sandbox.py  test_utils.py
docker/: bundler.Dockerfile  compose.yaml  controller.Dockerfile  core.Dockerfile  mcpserver.Dockerfile  sandbox-bundle.Dockerfile  sandbox-runtime.Dockerfile  vmlinux.Dockerfile
docs/: PRD.md  hive-diagram.excalidraw  multi-agent.excalidraw  page.mdx
examples/: .gitignore  README.md
inspector/: README.md  eslint.config.js  package-lock.json  package.json
runtime/: index.js  package.json
scripts/: bundle-images.sh  sync-client-version.sh  tag-sandbox-images.sh
(+757 files in other folders)
