[project]
name = "hiver-py"
version = "0.1.23"
description = "Python client for the Hiver runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiver"]

[tool.hatch.build.targets.sdist]
include = ["src/hiver", "README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://hiver.sh"
